--- a/CL-2/IIOT/Theory.ipynb
+++ b/CL-2/IIOT/Theory.ipynb
@@ -5,6 +5,7 @@
    "id": "237c9881-7559-49fe-b65a-e99913a2d9aa",
    "metadata": {},
    "source": [
+    "### Link to All - https://chatgpt.com/share/672c23c1-1e0c-8012-b090-0b5e3d296977 \n",
     "### Arduino and Raspberry Pi in IIoT\n",
     "\n",
     "**1. Arduino**\n",
