--- a/CL-2/IR/Theory.ipynb
+++ b/CL-2/IR/Theory.ipynb
@@ -5,6 +5,7 @@
    "id": "28636c0d-f0c6-47c9-9d0f-97d2ac67c204",
    "metadata": {},
    "source": [
+    "### Link to all- https://chatgpt.com/share/672c247c-f07c-8012-a400-fd6ade1f70c4 \n",
     "Pre-processing is an essential step in preparing text data for machine learning and natural language processing (NLP) applications. The main goal of text pre-processing is to transform raw text into a clean and structured format that allows models to perform better and achieve higher accuracy. Here’s an overview of the process, common techniques, and why it's important:\n",
     "\n",
     "### Why Text Pre-processing is Used\n",
